Athena/wwwroot/Templates/template1/Ingress/juice-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    lab: juice-shop
  name: ingress-juice
spec:
  rules:
    - host: test.athenaprojectlab.com
      http:
        paths:
          - backend:
              serviceName: juice-shop-interface
              servicePort: 80
